# kinova_robot_arm

./: README.md
kinova_robot_arm/: CMakeLists.txt  README.md  package.xml
kinova_robot_arm_description/: CMakeLists.txt  README.md  package.xml
kinova_robot_arm_description/urdf/: gen3_lite_gen3_lite_2f.xacro
